Fix colour contrast

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -24,6 +24,7 @@ $white-10: rgba(255, 255, 255, 0.1);
 
 // Mulberry
 $mulberry: #6d0839;
+$mulberry-90: rgba(109, 8, 57, 0.9);
 $mulberry-80: rgba(109, 8, 57, 0.8);
 $mulberry-70: rgba(109, 8, 57, 0.7);
 $mulberry-50: rgba(109, 8, 57, 0.5);
@@ -32,10 +33,10 @@ $mulberry-50: rgba(109, 8, 57, 0.5);
 $key-lime: #D0E799;
 
 // Miscellaneous
-$dusty-rose: #b5839b;
+$eggplant: #704356;
 $limeade: #289900;
 $carmine: #990019;
 $mulberry-key-lime: linear-gradient(104.26deg, $mulberry 0%, $key-lime 175.81%);
 $purple-yay: #A157E8;
-$steel-blue: #3792B2;
+$blumine: #175C6D;
 $cornflower: #91D7E8;
