--- a/app/assets/stylesheets/core/text.scss
+++ b/app/assets/stylesheets/core/text.scss
@@ -5,7 +5,7 @@
 }
 
 .subtle {
-  color: $dusty-rose;
+  color: $eggplant;
 }
 
 .moment p {
