--- a/client/app/components/Input/InputTextarea.scss
+++ b/client/app/components/Input/InputTextarea.scss
@@ -25,7 +25,7 @@
   color: $white;
   outline: none;
   a {
-    color: $steel-blue !important;
+    color: $blumine !important;
     cursor: pointer;
   }
   b, strong {
